--- a/src/screens/MainScreens/Doctor/styles.css
+++ b/src/screens/MainScreens/Doctor/styles.css
@@ -53,7 +53,7 @@
     object-fit: contain;
 }
 .intake-card {
-    width: 80%;
+    width: 92%;
     border-radius: 25px;
     background-color: #f5f6f8;
     padding: 30px 15px;
@@ -178,10 +178,11 @@
 }
 /* doctor List */
 .searchMain {
-padding: 10px 20px;
+    padding: 10px 20px;
+    width: 95%;
 }
 .searchContainer {
-    width: 95%;
+    /* width: 100%; */
     background-color: #ffffff;
     /* color: #40e0d0; */
     display: flex;
@@ -222,19 +223,22 @@ font-weight: 700;
     color: #3C4248;
     max-width: 80%;
 }
-.filter-model {
-    z-index: 100000000000;
+.filter-model-container {
+    position: absolute;
+    top: 100px;
+    left: 0 !important;
+    right: 0 !important;
+    width: 90%;
     display: flex;
-    flex: 1;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 40%;
+    max-width: 600px !important;
+}
+.filter-model {
+    z-index: 100000000000;
     background-color: #f0f4f7;
-    position: absolute;
-    top: 100px;
-    left: 32%;
-    min-width: 300px;
+    width: 80%;
 }
 .doctor-model-card-by-model {
     display: flex;
@@ -244,8 +248,6 @@ font-weight: 700;
     width: 100%;
     border-radius: 25px;
     background-color: #ffffff;
-    /* padding: 30px 20px; */
-    /* margin-bottom: 25px; */
     
 }
 .sumpthom-model{
@@ -254,10 +256,10 @@ font-weight: 700;
     color: #6E8FA3;
 }
 .model-content {
-    margin: 20px;
+    margin: 0px;
     background-color: #f0f4f7;
     border-radius: 20px;
-    padding: 30px;
+    padding: 20px;
     width: 100%;
 }
 .ModelTitleView {
@@ -304,8 +306,41 @@ font-weight: 700;
     flex-direction: column;
     height: 100%;
 }
-
 /* appointment */
+/* intakeform */
+.success-model-intakeform{
+    position: absolute;
+    top: 30%;
+    left: 5%;
+    right: 0;
+    width: 80%;
+    height:200px;
+    background-color: #ffffff;
+    border-radius: 20px;
+    padding: 28px;
+    cursor: pointer;
+}
+.backhomeBtn {
+    background-color: #40e0d0;
+    border-radius: 8px;
+    width: auto;
+    margin: 0;
+    padding: 0;
+    padding: 10px ;
+}
+.backhomeText {
+    color: #ffffff;
+    font-size: 18px;
+    margin: 0;
+    text-align: center;
+}
+.intakeForm-concon {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+/* intakeform */
 /* media query */
 @media only screen and (max-width: 1000px) {
     .age-container {
