--- a/src/screens/MainScreens/SympthomChecker/styles.css
+++ b/src/screens/MainScreens/SympthomChecker/styles.css
@@ -19,6 +19,7 @@
     align-items: center;
     background-color: #f0f4f7;
     height: 60px;
+    padding: 5px;
 }
 .age-headerSub {
     padding: 10px;
@@ -124,6 +125,8 @@
     align-items: center;
     border-radius: 8px;
     padding: 10px;
+    width: 85%;
+    margin-bottom: 30px;
 }
 .submit2 {
     background-color: #898C95 ;
@@ -133,6 +136,8 @@
     align-items: center;
     border-radius: 8px;
     padding: 10px;
+    width: 85%;
+    margin-bottom: 30px;
 }
 .submit-text {
     color: #ffffff;
@@ -406,5 +411,24 @@
     }
     .submit-container {
         width: 80%;
+    }
+}
+@media only screen and (max-width: 480px) {
+    
+    .age-cardTitle2 {
+        font-size: 16px;
+        margin-bottom: 15px;
+    }
+    .age-title1{
+        font-size: 22px;
+    }
+    .age-title2{
+        font-size: 18px;
+    }
+    .describe-search-main-container {
+        padding: 10px 20px;
+        margin-bottom: 20px;
+        width: 75%;
+        margin-left: -7%;
     }
 }
