--- a/src/screens/styles.css
+++ b/src/screens/styles.css
@@ -601,4 +601,7 @@ text-decoration-color: #29ddc6;
     width: 120px;
     height: 80px;
 }
+.onBoarding-logo{
+    background-position: left;
+}
 }
