--- a/src/screens/MainScreens/styles.css
+++ b/src/screens/MainScreens/styles.css
@@ -185,7 +185,7 @@
     padding-bottom: 100px !important;
 }
 .intake-card {
-    width: 80%;
+    width: 90%;
     border-radius: 25px;
     background-color: #f5f6f8;
     padding: 30px 15px;
@@ -276,6 +276,9 @@ margin-bottom: 10px;
     margin-bottom: 50px;
 }
 /* noChat */
+.doctors-relevant-div{
+    padding-bottom: 150px;
+}
 .doctors-relevant {
 background-color: #40e0d0;
 display: flex;
@@ -662,7 +665,6 @@ color: #ffffff;
         padding: 5px 10px;
     }
     .intake-card {
-        width: 95% !important;
         padding: 15px !important;
         margin: 15px;
     }
