--- a/src/screens/styles.css
+++ b/src/screens/styles.css
@@ -610,3 +610,38 @@ text-decoration-color: #29ddc6;
     background-position: left;
 }
 }
+/* User Profile Css */
+
+.user-profile-container {
+    width: 100vw;
+    height: 100vh;
+
+    display:flex;
+    flex-direction: column;
+    /* align-items:center;
+    justify-content:center; */
+    padding-top: 50px;
+    padding-bottom: 20px;
+    background-color:#f0f4f7;
+}
+.lable{
+    display: inline-flex;
+    flex-direction: row;
+    align-items: center;
+    column-gap: 5px;
+}
+.value{
+    color: #384062;
+    font-size: 16px;
+    font-weight: bold;
+    margin-left: 10px;
+    margin: 0px;
+    line-height: 20px;
+}
+@media screen and (min-width: 400px) {
+    .user-profile-container {
+        padding-left: 30%;
+        padding-right: 30%;
+        width: auto; 
+    }
+}
