--- a/src/screens/MainScreens/Profile/stylesProfile.css
+++ b/src/screens/MainScreens/Profile/stylesProfile.css
@@ -15,7 +15,7 @@
 .profile-title {
     font-size: 20px;
     color: #000;
-    marign
+    margin-bottom: 50px;
 }
 .lable{
     display: inline-flex;
