--- a/src/screens/Components/styles.css
+++ b/src/screens/Components/styles.css
@@ -322,3 +322,59 @@
 }
 
 
+/* Skip Popup */
+
+.popupContainer{
+    background-color: rgba(79, 79, 79, 0.49);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 10000;
+}
+.popup{
+    padding-bottom: 15px;
+    width: 80%;
+    background-color: white;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    /* align-items: center; */
+}
+.popup::before{
+    content: "Oops!";
+    background-color: rgb(52, 109, 216);
+    width: 40%;
+    font-size: 18px;
+    color: white;
+    padding: 8px 20px;
+    border-radius: 10px 0;
+}
+.popupMessage{
+    padding: 0 10px;
+    font-size: 14px;
+}
+.actions{
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 10px;
+    /* align-items: center; */
+    column-gap: 20px;
+}
+.actions button{
+    padding: 8px 15px;
+    background-color: transparent;
+    border: 1px solid rgb(174, 174, 174);
+    border-radius: 5px;
+}
+.exit{
+    color: rgb(174, 174, 174);
+}
+
+.retry{
+    background-color: rgb(52, 109, 216) !important;
+    color: white;
+}
