--- a/src/screens/MainScreens/Doctor/styles.css
+++ b/src/screens/MainScreens/Doctor/styles.css
@@ -344,6 +344,22 @@ font-weight: 700;
     align-items: center;
 }
 /* intakeform */
+.prefix-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.prefix {
+    outline: none;
+    border: 0;
+    font-size: 16px;
+    background-color: #f0f4f7;
+    border-radius: 8px;
+    width: 30px;
+    margin-top: 20px;
+    color: #000000;
+    padding: 10px;
+}
 /* media query */
 @media only screen and (max-width: 1000px) {
     .age-container {
