--- a/src/screens/MainScreens/Doctor/styles.css
+++ b/src/screens/MainScreens/Doctor/styles.css
@@ -349,17 +349,21 @@ font-weight: 700;
     flex-direction: row;
     align-items: center;
 }
+.prefix-container input{
+    border-radius: 0 8px 8px 0;
+}
 .prefix {
     outline: none;
     border: 0;
     font-size: 16px;
     background-color: #f0f4f7;
-    border-radius: 8px;
+    border-radius: 8px 0 0 8px;
     width: 30px;
     margin-top: 20px;
     color: #000000;
-    padding: 10px;
+    padding: 8.5px;
 }
+
 /* media query */
 @media only screen and (max-width: 1000px) {
     .age-container {
@@ -372,3 +376,4 @@ font-weight: 700;
         left: 20%;
     }
 }
+
