--- a/src/screens/MainScreens/Doctor/styles.css
+++ b/src/screens/MainScreens/Doctor/styles.css
@@ -364,6 +364,25 @@ font-weight: 700;
     padding: 8.5px;
 }
 
+
+
+
+/* captcha model */
+.Captcha_model{
+    z-index: 500;
+    background-color: #f0f4f7;
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+
+   
+}
+.Captcha_model div{
+    margin-left: 3rem;
+}
 /* media query */
 @media only screen and (max-width: 1000px) {
     .age-container {
@@ -376,4 +395,6 @@ font-weight: 700;
         left: 20%;
     }
 }
+
+
 
