--- a/src/screens/MainScreens/Doctor/styles.css
+++ b/src/screens/MainScreens/Doctor/styles.css
@@ -395,6 +395,11 @@ font-weight: 700;
         left: 20%;
     }
 }
+@media screen and (max-width: 700px) {
+    .Captcha_model div{
+        margin-left: .4rem !important;
+    }
+}
 
 
 
